<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.dataportabilityproject</groupId>
  <artifactId>portability-parent</artifactId>
  <packaging>pom</packaging>
  <name>Portability Parent Project</name>
  <version>1.0-SNAPSHOT</version>

  <!-- subdirectories containing sub-projects -->
  <modules>
    <module>portability-core</module>
    <module>portability-api</module>
    <module>portability-worker</module>

    <!--New modules-->
    <module>portability-types-client</module>
    <module>portability-types-transfer</module>
    <module>portability-test-utilities</module>
    <module>portability-spi-transfer</module>
    <module>portability-spi-gateway</module>
    <module>portability-spi-cloud</module>
    <module>portability-transfer</module>
    <module>portability-cloud</module>
    <module>portability-gateway</module>
    <module>extensions/cloud/portability-cloud-google</module>
    <module>extensions/data-transfer/portability-data-transfer-google</module>
  </modules>

  <build>
    <pluginManagement>
    <plugins>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.3</version>
          <configuration>
              <source>1.8</source>
              <target>1.8</target>
              <useIncrementalCompilation>false</useIncrementalCompilation>
          </configuration>
      </plugin>
    </plugins>
    </pluginManagement>
  </build>
</project>
